PINZ-106: developing trip service
